Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Tự động chuyển hướng HTTP -> HTTPS
    nginx.ingress.kubernetes.io/secure-backends: "true"  # Kết nối backend qua HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: dannythesec.online
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /ready
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /started
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - dannythesec.online  
      secretName: app-ssl-cert
